--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ github_username:  qd452
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
+theme: jekyll-theme-cayman
+
 plugins:
   - jekyll-feed
 
