change background pic

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: DoNG's Blog
 SEOTitle: 冬的博客 | DoNG's Blog
-header-img: img/home-bg.jpg
+header-img: img/home-bg-o.jpg
 email: qudong452@gmail.com
 description: "DoN't Give-up!"
 keyword: ""
