--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ future: true
 
 # SNS settings
 RSS: false
+stackoverflow_username: qudong
 # weibo_username:     qd452
 # zhihu_username:     qd452
 github_username:    qd452
