--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: img/home-bg-o.jpg
 email: qudong452@gmail.com
 description: "DoN't Give-up!"
 keyword: ""
-url: "qd452.github.io"              # your host, for absolute URL
+url: "https://qd452.github.io"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Publish posts or collection documents with a future date.
